@startuml
title Modelo de Domínio - Book / Category / Stats

package "Models" {
  class Book {
    +id: int
    +title: str
    +description: str
    +product_type: str
    +price_excl_tax: float
    +price_incl_tax: float
    +tax: float
    +availability: int
    +number_of_reviews: int
    +upc: str
    +rating: int
    +image_url: str
    +category_id: int
  }

  class Category {
    +id: int
    +name: str
  }

  class BookOverviewSchema {
    +total_books: float
    +avg_price: float
    +avg_rating: float
    +distribution_rating: dict
  }

  class CategoryOverviewSchema {
    +category: str
    +total_books: int
    +avg_price: float
  }
}

Book --> Category : category_id
Book ..> BookOverviewSchema : used in stats
Category ..> CategoryOverviewSchema : used in stats

note right of Book
  - `rating` possui constraint (0..5)
  - `upc` é único
end note

@enduml
